Update to new chunk pos record field accessors